# shoppinglist_srv

./: .gitignore  Cargo.toml
files/: index.html  recipes.html  shoppinglist.html  shoppinglist.js
src/: main.rs
