[package]
name = "shoppinglist_srv"
version = "0.1.0"
authors = ["neosam"]

[dependencies]
shoppinglist = { path = "../shoppinglist" }
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
serde_json = "1.0"
uuid = { version = "0.5", features = ["serde", "v4"] }
serde_derive = "1.0"
serde = "1.0"
